--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,8 +1,14 @@
 {
     "type": "postgres",
-    "host": "localhost",
+      "host": "localhost",
     "port": 5432,
     "username": "postgres",
     "password": "docker",
-    "database": "gostack_gobarber"
- }
+    "database": "gostack_gobarber",
+    "migrations": [
+      "./src/database/migrations/*.ts"
+    ],
+    "cli": {
+      "migrationsDir": "/src/database/migrations"
+    }
+  }
