--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "projeto-barber",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "dependencies": {
-    "date-fns": "^2.16.1",
-    "express": "^4.17.1",
-    "pg": "^8.3.3",
-    "typeorm": "^0.2.26",
-    "uuidv4": "^6.2.3"
-  },
-  "scripts": {
-    "build": "tsc",
-    "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.8",
-    "ts-node-dev": "^1.0.0-pre.62",
-    "typescript": "^4.0.2"
-  }
+   "name": "projeto-barber",
+   "version": "1.0.0",
+   "main": "index.js",
+   "license": "MIT",
+   "dependencies": {
+      "date-fns": "^2.16.1",
+      "express": "^4.17.1",
+      "pg": "^8.3.3",
+      "reflect-metadata": "^0.1.10",
+      "typeorm": "0.2.26",
+      "uuidv4": "^6.2.3"
+   },
+   "scripts": {
+      "build": "tsc",
+      "dev:server": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
+      "start": "ts-node src/index.ts",
+      "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+   },
+   "devDependencies": {
+      "@types/express": "^4.17.8",
+      "@types/node": "^8.0.29",
+      "ts-node": "3.3.0",
+      "ts-node-dev": "^1.0.0-pre.62",
+      "typescript": "3.3.3333"
+   }
 }
